# docker-network-plugin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.json
protos/: entry.proto
src/: docker_plugin_api.rs  main.rs  permissive_json.rs
